<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/avs_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_36"
            android:src="@drawable/menu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center" >

        <RelativeLayout
            android:id="@+id/camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center" >

            <com.ichano.rvs.streamer.ui.MediaSurfaceView
                android:id="@+id/cameraView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toEndOf="@id/camera_layout"
            android:layout_toRightOf="@id/camera_layout"
            android:background="@drawable/info_bg"
            android:orientation="vertical"
            android:padding="@dimen/dp_10" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/cid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cid" />

                <TextView
                    android:id="@+id/cid"
                    style="@style/cid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/cid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <TextView
                    android:id="@+id/pwd"
                    style="@style/cid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                style="@style/line_text"
                android:layout_width="match_parent" />

            <TextView
                style="@style/info_text"
                android:layout_width="@dimen/dp_130"
                android:layout_height="wrap_content"
                android:text="@string/barcode_tip" />

            <ImageView
                android:id="@+id/barcode"
                android:layout_width="@dimen/qr_size"
                android:layout_height="@dimen/qr_size"
                android:background="@color/white"
                android:scaleType="centerInside" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toEndOf="@id/camera_layout"
            android:layout_toRightOf="@id/camera_layout"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/disclaimer"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:gravity="center" >

            <TextView
                style="@style/device_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name" />

            <TextView
                android:id="@+id/deviceName"
                style="@style/device_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/logState"
            style="@style/device_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.0" />
    </LinearLayout>

</LinearLayout>